--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -100,8 +100,8 @@
                 </table>
               </dd>
 
-            <dt>{{ui.profile.pagerId}}</dt>
-              <dd>{{(data.resources.pagerId == '') && '-' || data.resources.pagerId}}</dd>
+            <!--<dt>{{ui.profile.pagerId}}</dt>-->
+              <!--<dd>{{(data.resources.pagerId == '') && '-' || data.resources.pagerId}}</dd>-->
 
             <dt>{{ui.profile.address}}</dt>
               <dd>{{(data.resources.PostAddress == '') && '-' || data.resources.PostAddress}}</dd>
@@ -364,16 +364,16 @@
               </div>
             </div>
 
-            <div class="control-group"
-                 ng-show="app.resources.role == 0">
-              <label class="control-label">{{ui.profile.pagerId}}</label>
-              <div class="controls">
-                <input  type="text"
-                        class="span5"
-                        ng-model="profilemeta.pagerId"
-                        value="{{data.resources.pagerId}}">
-              </div>
-            </div>
+            <!--<div class="control-group"-->
+                 <!--ng-show="app.resources.role == 0">-->
+              <!--<label class="control-label">{{ui.profile.pagerId}}</label>-->
+              <!--<div class="controls">-->
+                <!--<input  type="text"-->
+                        <!--class="span5"-->
+                        <!--ng-model="profilemeta.pagerId"-->
+                        <!--value="{{data.resources.pagerId}}">-->
+              <!--</div>-->
+            <!--</div>-->
 
             <div class="control-group">
               <label class="control-label">{{ui.profile.address}}</label>
