--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -12,222 +12,6 @@
 <!-- end page header -->
 
 
-<!--smartAlarming-->
-<div class="row-fluid">
-  <div class="sa widget span12"
-       ng-show="config.profile.smartAlarm">
-
-    <div class="head">
-      <h4>SlimAlarmeren</h4>
-
-      <div class="sa-state"
-           class="pull-right">
-        <small ng-show="app.guard.currentState">
-          <i class="icon-fire"></i>&nbsp;Status
-        </small>
-        &nbsp;&nbsp;
-
-        <span ng-show="app.guard.currentState=='available' || app.guard.currentState=='Beschikbaar'"
-              class="label"
-              style="background-color: #6cad6c">BESCHIKBAAR</span>
-
-        <span ng-show="app.guard.currentState=='noplanning' || app.guard.currentState=='Mogelijk inzetbaar'"
-              class="label"
-              style="background-color: #a0a0a0">GEEN PLANNING</span>
-
-        <span ng-show="app.guard.currentState=='unavailable' || app.guard.currentState=='Niet Beschikbaar'"
-              class="label"
-              style="background-color: #d34545">NIET BESCHIKBAAR</span>
-
-        <span class="label label-inverse" style="margin-left: 5px;">{{app.guard.role.toUpperCase()}}</span>
-
-        <div class="btn-group"
-             style="margin: -10px 0 0 8px;">
-          <button class="btn btn-mini dropdown-toggle"
-                  data-toggle="dropdown">Nieuwe beschikbaarheid <span class="caret"></span></button>
-          <ul class="dropdown-menu pull-right fast-availability"
-              style="font-size: 10px;">
-            <li>
-              <a ng-click="setPrefixedAvailability(true, 1)">
-                <div class="square available"></div>
-                Beschikbaar (1 uur)
-              </a>
-            </li>
-            <li>
-              <a ng-click="setPrefixedAvailability(true, 6)">
-                <div class="square available"></div>
-                Beschikbaar (6 uur)
-              </a>
-            </li>
-            <li>
-              <a ng-click="setPrefixedAvailability(true, 24)">
-                <div class="square available"></div>
-                Beschikbaar (24 uur)
-              </a>
-            </li>
-            <li class="divider"></li>
-            <li>
-              <a ng-click="setPrefixedAvailability(false, 1)">
-                <div class="square unavailable"></div>
-                Niet beschikbaar (1 uur)
-              </a>
-            </li>
-            <li>
-              <a ng-click="setPrefixedAvailability(false, 6)">
-                <div class="square unavailable"></div>
-                Niet beschikbaar (6 uur)
-              </a>
-            </li>
-            <li>
-              <a ng-click="setPrefixedAvailability(false, 24)">
-                <div class="square unavailable"></div>
-                Niet beschikbaar (24 uur)
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        </small>
-      </div>
-
-    </div>
-    <hr/>
-
-    <p ng-show="loading.smartAlarm">Indeling SlimAlarmeren lijst laden...</p>
-
-
-    <!--smartAlarming listing-->
-    <ul class="sa-setup"
-        ng-hide="loading.smartAlarm">
-
-      <!--truck personnel-->
-      <li class="sa-truck">
-        <div class="sa-member"
-             ng-repeat="trucker in saMembers.truck | orderBy:'rank'">
-            <span class="sa-member-icon {{(trucker.class) && trucker.class}}">
-              <strong>{{trucker.icon}}</strong>
-            </span>
-
-          <div class="sa-member-card">
-
-            <!--<h5 ng-hide="app.resources.role > 1">-->
-            <h5>
-              <a href="#/profile/{{trucker.uuid}}#profile" ng-show="trucker.uuid">
-                {{trucker.name}}
-              </a>
-              <span ng-hide="trucker.uuid">{{trucker.name}}</span>
-            </h5>
-            <!--<h5 ng-show="app.resources.role > 1">here {{trucker.name}}</h5>-->
-
-
-            <hr/>
-            <span>{{trucker.role}}</span>
-          </div>
-        </div>
-      </li>
-      <!--end truck personnel-->
-
-      <!--reserves personnel-->
-      <li class="sa-reserves"
-          ng-show="toggleReserves">
-
-        <div class="sa-member"
-             ng-repeat="reserve in saMembers.reserves.available">
-            <span class="sa-member-icon sa-icon-reserve-available">
-              <strong>B{{$index+1}}</strong>
-            </span>
-
-          <div class="sa-member-card">
-
-
-            <h5>
-              <a href="#/profile/{{reserve.id}}#profile">{{reserve.name}}</a>
-            </h5>
-            <!--<h5>{{reserve.name}}</h5>-->
-
-
-            <hr/>
-            <span>Beschikbaar</span>
-          </div>
-        </div>
-
-        <div class="sa-member"
-             ng-repeat="reserve in saMembers.reserves.unavailable">
-            <span class="sa-member-icon sa-icon-reserve-unavailable">
-              <strong>N{{$index+1}}</strong>
-            </span>
-
-          <div class="sa-member-card">
-
-
-            <h5>
-              <a href="#/profile/{{reserve.id}}#profile">{{reserve.name}}</a>
-            </h5>
-            <!--<h5>{{reserve.name}}</h5>-->
-
-
-            <hr/>
-            <span>Niet beschikbaar</span>
-          </div>
-        </div>
-
-
-      </li>
-      <!--end reserves no-planning personnel-->
-
-      <!--reserves personnel-->
-      <li class="sa-reserves"
-          ng-show="toggleReserves">
-
-        <div class="sa-member"
-             ng-repeat="reserve in saMembers.reserves.noplanning">
-            <span class="sa-member-icon sa-icon-reserve-noplanning">
-              <strong>{{$index+1}}</strong>
-            </span>
-
-          <div class="sa-member-card">
-
-
-            <h5>
-              <a href="#/profile/{{reserve.id}}#profile">{{reserve.name}}</a>
-            </h5>
-            <!--<h5>{{reserve.name}}</h5>-->
-
-
-            <hr/>
-            <span>Mogelijk inzetbaar</span>
-          </div>
-        </div>
-
-      </li>
-      <!--end reserves no-planning personnel-->
-
-    </ul>
-    <!--end smartAlarming listing-->
-
-    <!-- footer -->
-    <p ng-hide="loading.smartAlarm"
-       style="margin-top:10px;">
-      <small class="pull-left">
-        <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>&nbsp;
-        <span class="muted">{{saSynced | nicelyDate}}</span>
-      </small>
-    </p>
-    <!-- end footer -->
-
-    <button ng-click="toggleReserves=!toggleReserves"
-            class="btn btn-mini pull-right"
-            ng-hide="loading.smartAlarm">
-      <!-- TODO: Take them in localisation -->
-      <span ng-hide="toggleReserves">Toon reserves</span>
-      <span ng-show="toggleReserves">Verberg reserves</span>
-    </button>
-
-  </div>
-</div>
-<!--end smartAlarming-->
-
-
 <!--Availability list-->
 <div class="row-fluid">
   <div id="availabilities" class="sa widget span12">
@@ -410,7 +194,7 @@
 <div class="row-fluid">
 
   <!-- pie charts for groups -->
-  <div class="widget {{(!browser.mobile) && 'span9' || 'span12'}}">
+  <div class="widget span12">
 
     <div class="head">
       <h4>{{ui.dashboard.overview}}</h4>
@@ -525,71 +309,6 @@
 
   </div>
   <!-- end pie charts for groups -->
-
-  <!-- announcements sidebar -->
-  <div class="widget {{(!browser.mobile) && 'span3' || 'span12'}}"
-       style="{{(browser.mobile) && 'margin-left: 0'}}"
-       ng-show="config.profile.p2000.status">
-
-    <div class="head">
-      <h4>{{ui.dashboard.announcements}}</h4>
-    </div>
-    <hr>
-
-    <p ng-show="loading.alerts">{{ui.dashboard.loadingP2000}}</p>
-
-    <!-- p2000 loop -->
-    <ul id="announcements" ng-hide="loading.alerts">
-      <li ng-show="alarms.list.length < 1">
-        {{ui.dashboard.noP2000}}
-      </li>
-      <li ng-repeat="alarm in alarms.list">
-        <table>
-          <tr>
-            <td class="first">
-              <span class="prio label label-important" ng-show="alarm.prio['1']">PRIO 1</span>
-              <span class="prio label label-warning" ng-show="alarm.prio['2']">PRIO 2</span>
-              <span class="prio label label-info" ng-show="alarm.prio['3']">PRIO 3</span>
-              <span class="prio label label-inverse" ng-show="alarm.prio.test">PROEFALARM</span>
-            </td>
-            <td class="last">
-              <span class="label label-natural" style="margin-bottom: 7px">{{alarm.day}} {{alarm.time}}</span>
-              <br/>
-              {{alarm.body}}
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <small class="">
-                <i class="icon-bullhorn" style="margin-top: -2px; color: #a0a0a0 !important"></i>
-                <i>{{alarm.msgCode}}</i>
-              </small>
-            </td>
-          </tr>
-        </table>
-      </li>
-    </ul>
-    <!-- end p2000 loop -->
-
-    <hr ng-hide="loading.alerts" class="lastline">
-
-    <!-- footer -->
-    <p ng-hide="loading.alerts">
-      <small class="pull-left">
-        <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>&nbsp;
-        <span class="muted">{{synced.alarms | nicelyDate}}</span>
-      </small>
-      <br/>
-      <small class="pull-left">
-        <span class="text-warning">Capcode(s):</span>&nbsp;
-        <span class="muted">{{capcodes}}</span>
-        <span ng-hide="capcodes" class="muted">{{config.profile.p2000.codes}}</span>
-      </small>
-    </p>
-    <!-- end footer -->
-
-  </div>
-  <!-- end announcements sidebar -->
 
 </div>
 <!-- end pies & alarms -->
