--- a/war/js/views/logs.html
+++ b/war/js/views/logs.html
@@ -82,20 +82,49 @@
           <tbody>
           <tr ng-repeat="log in data.logs | filter: filtered | orderBy:ordered : reversed">
             <td>
-              <span ng-show="(ordered=='started.stamp')">{{(log.tracked) && '&angrt;'}}</span>
               <span class="label label-inverse log-{{log.status}}">{{log.status}}</span>
-              <!--{{log.trackingToken}}-->
+              <span ng-show="log.records.length > 0">
+                <span ng-repeat="record in log.records">
+                <br/>
+                  &angrt; <span class="label label-inverse log-{{record.status}}">{{record.status}}</span>
+                </span>
+              </span>
             </td>
-            <td>{{log.from}}</td>
-            <td>{{log.to}}</td>
-            <td>{{log.started.date}}</td>
-            <td>{{log.duration.presentation}}</td>
+            <td>
+              {{log.from}}
+              <span ng-show="log.records.length > 0"  ng-repeat="record in log.records">
+                <br/>
+                {{record.from}}
+              </span>
+            </td>
+            <td>
+              {{log.to}}
+              <span ng-show="log.records.length > 0" ng-repeat="record in log.records">
+                <br/>
+                {{record.to}}
+              </span>
+            </td>
+            <td>
+              {{log.started.date}}
+              <span ng-show="log.records.length > 0" ng-repeat="record in log.records">
+                <br/>
+                {{record.started.date}}
+              </span>
+            </td>
+            <td>
+              {{log.duration.presentation}}
+              <span ng-show="log.records.length > 0" ng-repeat="record in log.records">
+                <br/>
+                {{record.duration.presentation}}
+              </span>
+            </td>
           </tr>
           </tbody>
         </table>
       </div>
 
       <hr/>
+
       <small class="pull-left">
         <span class="text-warning">{{ui.planboard.lastSyncTime}}</span>&nbsp;
         <span class="muted">{{data.synced | date: 'medium'}}</span>
