--- a/war/js/views/logs.html
+++ b/war/js/views/logs.html
@@ -91,6 +91,7 @@
               </span>
             </td>
             <td>
+              <!--<pre><small>{{log | json}}</small></pre>-->
               {{log.from}}
               <span ng-show="log.records.length > 0"  ng-repeat="record in log.records">
                 <br/>
