resolved issues with paths

--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -32,7 +32,7 @@
 						a(ng-click='changeLanguage("en")') English
 						| |
 						a(ng-click='changeLanguage("nl")') Nederlands
-				img(src='img/standby_logo_small.png', alt='StandBy Logo', ng-hide='config.profile.own')
+				img(src='images/standby_logo_small.png', alt='StandBy Logo', ng-hide='config.profile.own')
 				span.version(style='margin-top: 0px;')
 					a(href='version.html', target='_blank') StandBy v{{config.version}}
 
@@ -57,7 +57,7 @@
 				p
 					small
 						a(ng-click='views.login=true; views.forgot=false') {{ui.login.returnLogin}}
-				img(src='img/standby_logo_small.png', alt='StandBy Logo', ng-hide='config.profile.own')
+				img(src='images/standby_logo_small.png', alt='StandBy Logo', ng-hide='config.profile.own')
 				span.version
 					a(href='version.html', target='_blank') StandBy v{{config.version}}
 
