--- a/app/styles/_depreciated/app/_styles.scss
+++ b/app/styles/_depreciated/app/_styles.scss
@@ -193,7 +193,6 @@ dl {
 //   display: none;
 // }
 
-
 //TODO: Check whether they are used!
 #scheaduler-pane {
   margin-top: 15px;
@@ -295,10 +294,26 @@ dl {
   }
 }
 
+.text-turq {
+  color: $turq
+}
 
-.text-turq    { color: $turq }
-.text-orange  { color: $orange }
-.text-brown   { color: $brown }
-.text-beige   { color: $beige }
-.text-graytu  { color: $graytu }
-.text-red     { color: $red }
+.text-orange {
+  color: $orange
+}
+
+.text-brown {
+  color: $brown
+}
+
+.text-beige {
+  color: $beige
+}
+
+.text-graytu {
+  color: $graytu
+}
+
+.text-red {
+  color: $red
+}
