--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,18 +1,14 @@
 /**
  * Bootstrap
  */
-
-
 // Core variables and mixins
-@import "variables"; // Modify this for custom colors, font-sizes, etc
+@import "variables";
+// Modify this for custom colors, font-sizes, etc
 @import "mixins";
-
-
 /**
  * App styles
  */
 @import "app/entypo";
-
 @import "app/styles";
 @import "app/login";
 @import "app/dashboard";
@@ -20,8 +16,6 @@
 @import "app/frame";
 @import "app/notifications";
 @import "app/tabs";
-
 @import "app/timeline";
 @import "app/chosen";
-
 @import "app/queries";
