--- a/app/views/download-mobile-app.jade
+++ b/app/views/download-mobile-app.jade
@@ -1,18 +1,16 @@
 .row
   span(ng-hide='browser.mobile && browser.screen.width < 768')
     br
-
-  .btn-group.download-button(style="width: 190px; {{browser.screen.width > 768 && 'padding-left: 25px'}}")
-    button.btn.btn-success.dropdown-toggle(data-toggle='dropdown', style='width: 190px;')
+  .btn-group.download-button(style='width: 190px; {{browser.screen.width > 768 && "padding-left: 25px"}}')
+    button.btn.btn-success.dropdown-toggle(data-toggle='dropdown', style='width: 190px')
       | Download mobiele app {{position}}
-      ul.dropdown-menu.pull-right
-        li
-          a(href='https://play.google.com/store/apps/details?id=com.askcs.standby', target='_blank')
-            | Download Android App
-        li
-          a(href='https://itunes.apple.com/nl/app/standby/id655588325?mt=8&uo=4', target='itunes_store')
-            | Download iPhone App
-
+    ul.dropdown-menu.pull-right
+      li(ng-show='config.profile.mobileApp.android')
+        a(ng-href='{{config.profile.mobileApp.android}}', target='_blank')
+          | Download Android App
+      li(ng-show='config.profile.mobileApp.ios')
+        a(ng-href='{{config.profile.mobileApp.ios}}', target='itunes_store')
+          | Download iPhone App
   span(ng-show='browser.mobile && browser.screen.width < 768')
     br
     br
