--- a/app/styles/app/_login.scss
+++ b/app/styles/app/_login.scss
@@ -6,7 +6,7 @@
   border: 1px solid #d0cec1;
   border-radius: 5px;
   background-color: #fff;
-  box-shadow: 0 1px 3px rgba(103,97,83,.05);
+  box-shadow: 0 1px 3px rgba(103, 97, 83, .05);
   text-align: center;
 
   h2 {
@@ -32,7 +32,7 @@
   }
 
   p {
-    margin-top:15px;
+    margin-top: 15px;
   }
 
   form {
@@ -98,9 +98,9 @@
   ul {
     margin: 0;
     padding: 0;
-    list-style-type: none; 
+    list-style-type: none;
   }
 
-  li {  
+  li {
   }
 }
