--- a/app/styles/bootstrap/_buttons.scss
+++ b/app/styles/bootstrap/_buttons.scss
@@ -2,7 +2,6 @@
 // Buttons
 // --------------------------------------------------
 
-
 // Base styles
 // --------------------------------------------------
 
@@ -19,15 +18,15 @@
   vertical-align: middle;
   cursor: pointer;
 
-  @include buttonBackground($btnBackground, $btnBackgroundHighlight, $grayDark, 0 1px 1px rgba(255,255,255,.85));
+  @include buttonBackground($btnBackground, $btnBackgroundHighlight, $grayDark, 0 1px 1px rgba(255, 255, 255, .85));
 
   border: 1px solid $btnBorder;
   *border: 0; // Remove the border to prevent IE7's black border on input:focus
   border-bottom-color: darken($btnBorder, 10%);
   @include border-radius($baseBorderRadius);
   @include ie7-restore-left-whitespace(); // Give IE7 some love
-  
-  @include box-shadow(inset 0 1px 0 rgba(255,255,255,.05), 0 1px 2px rgba(0,0,0,.05));
+
+  @include box-shadow(inset 0 1px 0 rgba(255, 255, 255, .05), 0 1px 2px rgba(0, 0, 0, .05));
 
   // Hover/focus state
   &:hover,
@@ -65,8 +64,6 @@
 
 }
 
-
-
 // Button Sizes
 // --------------------------------------------------
 
@@ -76,6 +73,7 @@
   font-size: $fontSizeLarge;
   @include border-radius($borderRadiusLarge);
 }
+
 .btn-large [class^="icon-"],
 .btn-large [class*=" icon-"] {
   margin-top: 4px;
@@ -87,10 +85,12 @@
   font-size: $fontSizeSmall;
   @include border-radius($borderRadiusSmall);
 }
+
 .btn-small [class^="icon-"],
 .btn-small [class*=" icon-"] {
   margin-top: 0;
 }
+
 .btn-mini [class^="icon-"],
 .btn-mini [class*=" icon-"] {
   margin-top: -1px;
@@ -108,7 +108,6 @@
 // .btn [class*="badge"] {
 //   margin-top: 2px;
 // }
-
 
 // Block button
 // -------------------------
@@ -135,8 +134,6 @@ input[type="button"] {
   }
 }
 
-
-
 // Alternate buttons
 // --------------------------------------------------
 
@@ -147,7 +144,7 @@ input[type="button"] {
 .btn-success.active,
 .btn-info.active,
 .btn-inverse.active {
-  color: rgba(255,255,255,.75);
+  color: rgba(255, 255, 255, .75);
 }
 
 // Set the backgrounds
@@ -155,27 +152,31 @@ input[type="button"] {
 .btn-primary {
   @include buttonBackground($btnPrimaryBackground, $btnPrimaryBackgroundHighlight);
 }
+
 // Warning appears are orange
 .btn-warning {
   @include buttonBackground($btnWarningBackground, $btnWarningBackgroundHighlight);
 }
+
 // Danger and error appear as red
 .btn-danger {
   @include buttonBackground($btnDangerBackground, $btnDangerBackgroundHighlight);
 }
+
 // Success appears as green
 .btn-success {
   @include buttonBackground($btnSuccessBackground, $btnSuccessBackgroundHighlight);
 }
+
 // Info appears as a neutral blue
 .btn-info {
   @include buttonBackground($btnInfoBackground, $btnInfoBackgroundHighlight);
 }
+
 // Inverse appears as dark gray
 .btn-inverse {
   @include buttonBackground($btnInverseBackground, $btnInverseBackgroundHighlight);
 }
-
 
 // Cross-browser Jank
 // --------------------------------------------------
@@ -207,7 +208,6 @@ input[type="submit"].btn {
   }
 }
 
-
 // Link buttons
 // --------------------------------------------------
 
@@ -219,18 +219,21 @@ input[type="submit"].btn {
   background-image: none;
   @include box-shadow(none);
 }
+
 .btn-link {
   border-color: transparent;
   cursor: pointer;
   color: $linkColor;
   @include border-radius(0);
 }
+
 .btn-link:hover,
 .btn-link:focus {
   color: $linkColorHover;
   text-decoration: underline;
   background-color: transparent;
 }
+
 .btn-link[disabled]:hover,
 .btn-link[disabled]:focus {
   color: $grayDark;
