--- a/app/styles/bootstrap/_navbar.scss
+++ b/app/styles/bootstrap/_navbar.scss
@@ -2,7 +2,6 @@
 // Navbars (Redux)
 // --------------------------------------------------
 
-
 // COMMON STYLES
 // -------------
 
@@ -20,12 +19,12 @@
 // Gradient is applied to its own element because overflow visible is not honored by IE when filter is present
 .navbar-inner {
   min-height: $navbarHeight;
-  padding-left:  20px;
+  padding-left: 20px;
   padding-right: 20px;
   @include gradient-vertical($navbarBackgroundHighlight, $navbarBackground);
   border: 1px solid $navbarBorder;
   @include border-radius($baseBorderRadius);
-  @include box-shadow(0 1px 4px rgba(0,0,0,.065));
+  @include box-shadow(0 1px 4px rgba(0, 0, 0, .065));
 
   // Prevent floats from breaking the navbar
   @include clearfix();
@@ -42,7 +41,6 @@
   height: auto;
   overflow: visible;
 }
-
 
 // Brand: website or project name
 // -------------------------
@@ -95,6 +93,7 @@
 .navbar .btn-group {
   @include navbarVerticalAlign(30px); // Vertically center in navbar
 }
+
 .navbar .btn-group .btn,
 .navbar .input-prepend .btn,
 .navbar .input-append .btn,
@@ -150,8 +149,6 @@
   }
 }
 
-
-
 // Static navbar
 // -------------------------
 
@@ -162,8 +159,6 @@
     @include border-radius(0);
   }
 }
-
-
 
 // Fixed navbar
 // -------------------------
@@ -177,16 +172,19 @@
   z-index: $zindexFixedNavbar;
   margin-bottom: 0; // remove 18px margin for default navbar
 }
+
 .navbar-fixed-top .navbar-inner,
 .navbar-static-top .navbar-inner {
   border-width: 0 0 1px;
 }
+
 .navbar-fixed-bottom .navbar-inner {
   border-width: 1px 0 0;
 }
+
 .navbar-fixed-top .navbar-inner,
 .navbar-fixed-bottom .navbar-inner {
-  padding-left:  0;
+  padding-left: 0;
   padding-right: 0;
   @include border-radius(0);
 }
@@ -203,10 +201,11 @@
 .navbar-fixed-top {
   top: 0;
 }
+
 .navbar-fixed-top,
 .navbar-static-top {
   .navbar-inner {
-    @include box-shadow(0 1px 10px rgba(0,0,0,.1));
+    @include box-shadow(0 1px 10px rgba(0, 0, 0, .1));
   }
 }
 
@@ -214,11 +213,9 @@
 .navbar-fixed-bottom {
   bottom: 0;
   .navbar-inner {
-    @include box-shadow(0 -1px 10px rgba(0,0,0,.1));
+    @include box-shadow(0 -1px 10px rgba(0, 0, 0, .1));
   }
 }
-
-
 
 // NAVIGATION
 // ----------
@@ -230,10 +227,12 @@
   float: left;
   margin: 0 10px 0 0;
 }
+
 .navbar .nav.pull-right {
   float: right; // redeclare due to specificity
   margin-right: 0; // remove margin on float right nav
 }
+
 .navbar .nav > li {
   float: left;
 }
@@ -248,6 +247,7 @@
   font-weight: lighter;
   // text-shadow: 0 1px 0 $navbarBackgroundHighlight;
 }
+
 .navbar .nav .dropdown-toggle .caret {
   margin-top: 8px;
 }
@@ -267,7 +267,7 @@
   color: $navbarLinkColorActive;
   text-decoration: none;
   background-color: $navbarLinkBackgroundActive;
-  @include box-shadow(inset 0 3px 8px rgba(0,0,0,.8));
+  @include box-shadow(inset 0 3px 8px rgba(0, 0, 0, .8));
 }
 
 // Navbar button for toggling navbar items in responsive layouts
@@ -279,21 +279,21 @@
   margin-left: 5px;
   margin-right: 5px;
   @include buttonBackground(darken($navbarBackgroundHighlight, 5%), darken($navbarBackground, 5%));
-  @include box-shadow(inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.075));
+  @include box-shadow(inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .075));
 }
+
 .navbar .btn-navbar .icon-bar {
   display: block;
   width: 18px;
   height: 2px;
   background-color: #f5f5f5;
   @include border-radius(1px);
-  @include box-shadow(0 1px 0 rgba(0,0,0,.25));
+  @include box-shadow(0 1px 0 rgba(0, 0, 0, .25));
 }
+
 .btn-navbar .icon-bar + .icon-bar {
   margin-top: 3px;
 }
-
-
 
 // Dropdown menus
 // --------------
@@ -303,8 +303,8 @@
   &:before {
     content: '';
     display: inline-block;
-    border-left:   7px solid transparent;
-    border-right:  7px solid transparent;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
     border-bottom: 7px solid #ccc;
     border-bottom-color: $dropdownBorder;
     position: absolute;
@@ -314,14 +314,15 @@
   &:after {
     content: '';
     display: inline-block;
-    border-left:   6px solid transparent;
-    border-right:  6px solid transparent;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
     border-bottom: 6px solid $dropdownBackground;
     position: absolute;
     top: -6px;
     left: 10px;
   }
 }
+
 // Menu position and menu caret support for dropups via extra dropup class
 .navbar-fixed-bottom .nav > li > .dropdown-menu {
   &:before {
@@ -353,10 +354,12 @@
   background-color: $navbarLinkBackgroundActive;
   color: $navbarLinkColorActive;
 }
+
 .navbar .nav li.dropdown > .dropdown-toggle .caret {
   border-top-color: $navbarLinkColor;
   border-bottom-color: $navbarLinkColor;
 }
+
 .navbar .nav li.dropdown.open > .dropdown-toggle .caret,
 .navbar .nav li.dropdown.active > .dropdown-toggle .caret,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle .caret {
@@ -386,7 +389,6 @@
   }
 }
 
-
 // Inverted navbar
 // -------------------------
 
@@ -400,7 +402,7 @@
   .brand,
   .nav > li > a {
     color: $navbarInverseLinkColor;
-    text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
     &:hover,
     &:focus {
       color: $navbarInverseLinkColorHover;
@@ -472,7 +474,7 @@
       color: $white;
       background-color: $navbarInverseSearchBackground;
       border-color: $navbarInverseSearchBorder;
-      @include box-shadow(inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15));
+      @include box-shadow(inset 0 1px 2px rgba(0, 0, 0, .1), 0 1px 0 rgba(255, 255, 255, .15));
       @include transition(none);
       @include placeholder($navbarInverseSearchPlaceholderColor);
 
@@ -484,7 +486,7 @@
         text-shadow: 0 1px 0 $white;
         background-color: $navbarInverseSearchBackgroundFocus;
         border: 0;
-        @include box-shadow(0 0 3px rgba(0,0,0,.15));
+        @include box-shadow(0 0 3px rgba(0, 0, 0, .15));
         outline: 0;
       }
     }
