--- a/app/styles/bootstrap/_tables.scss
+++ b/app/styles/bootstrap/_tables.scss
@@ -2,7 +2,6 @@
 // Tables
 // --------------------------------------------------
 
-
 // BASE TABLES
 // -----------------
 
@@ -62,8 +61,6 @@ table {
   }
 }
 
-
-
 // CONDENSED TABLE W/ HALF PADDING
 // -------------------------------
 
@@ -73,7 +70,6 @@ table {
     padding: 4px 5px;
   }
 }
-
 
 // BORDERED VERSION
 // ----------------
@@ -153,9 +149,6 @@ table {
 
 }
 
-
-
-
 // ZEBRA-STRIPING
 // --------------
 
@@ -169,7 +162,6 @@ table {
   }
 }
 
-
 // HOVER EFFECT
 // ------------
 // Placed here since it has to come after the potential zebra striping
@@ -181,7 +173,6 @@ table {
     }
   }
 }
-
 
 // TABLE CELL SIZING
 // -----------------
@@ -200,11 +191,11 @@ table th[class*="span"],
 .table td,
 .table th {
   @for $i from 1 through 12 {
-    &.span#{$i} { @include tableColumns($i); }
+    &.span#{$i} {
+      @include tableColumns($i);
+    }
   }
 }
-
-
 
 // TABLE BACKGROUNDS
 // -----------------
