--- a/app/styles/bootstrap/_thumbnails.scss
+++ b/app/styles/bootstrap/_thumbnails.scss
@@ -2,7 +2,6 @@
 // Thumbnails
 // --------------------------------------------------
 
-
 // Note: `.thumbnails` and `.thumbnails > li` are overriden in responsive files
 
 // Make wrapper ul behave like the grid
@@ -11,6 +10,7 @@
   list-style: none;
   @include clearfix();
 }
+
 // Fluid rows have no left margin
 .row-fluid .thumbnails {
   margin-left: 0;
@@ -30,14 +30,15 @@
   line-height: $baseLineHeight;
   border: 1px solid #ddd;
   @include border-radius($baseBorderRadius);
-  @include box-shadow(0 1px 3px rgba(0,0,0,.055));
+  @include box-shadow(0 1px 3px rgba(0, 0, 0, .055));
   @include transition(all .2s ease-in-out);
 }
+
 // Add a hover/focus state for linked versions only
 a.thumbnail:hover,
 a.thumbnail:focus {
   border-color: $linkColor;
-  @include box-shadow(0 1px 4px rgba(0,105,214,.25));
+  @include box-shadow(0 1px 4px rgba(0, 105, 214, .25));
 }
 
 // Images and captions
@@ -47,6 +48,7 @@ a.thumbnail:focus {
   margin-left: auto;
   margin-right: auto;
 }
+
 .thumbnail .caption {
   padding: 9px;
   color: $gray;
