--- a/app/styles/bootstrap/_wells.scss
+++ b/app/styles/bootstrap/_wells.scss
@@ -2,8 +2,6 @@
 // Wells
 // --------------------------------------------------
 
-
-
 // Base class
 .well {
   min-height: 20px;
@@ -12,10 +10,10 @@
   background-color: $wellBackground;
   border: 1px solid darken($wellBackground, 7%);
   @include border-radius($baseBorderRadius);
-  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.15));
+  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .15));
   blockquote {
     border-color: #ddd;
-    border-color: rgba(0,0,0,.15);
+    border-color: rgba(0, 0, 0, .15);
   }
 }
 
@@ -24,6 +22,7 @@
   padding: 24px;
   @include border-radius($borderRadiusLarge);
 }
+
 .well-small {
   padding: 9px;
   @include border-radius($borderRadiusSmall);
