--- a/app/styles/responsive.scss
+++ b/app/styles/responsive.scss
@@ -6,24 +6,22 @@
 // Required for Windows 8 Metro split-screen snapping with IE10
 // Source: http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
 
-@-ms-viewport{
+@-ms-viewport {
   width: device-width;
 }
-
 
 // REPEAT VARIABLES & MIXINS
 // -------------------------
 // Required since we compile the responsive stuff separately
 
-@import "variables"; // Modify this for custom colors, font-sizes, etc
+@import "variables";
+// Modify this for custom colors, font-sizes, etc
 @import "mixins";
-
 
 // RESPONSIVE CLASSES
 // ------------------
 
 @import "responsive/responsive-utilities";
-
 
 // MEDIA QUERIES
 // ------------------
@@ -36,7 +34,6 @@
 
 // Phones to portrait tablets and narrow desktops
 @import "responsive/responsive-767px-max";
-
 
 // RESPONSIVE NAVBAR
 // ------------------
