--- a/app/styles/responsive/_responsive-767px-max.scss
+++ b/app/styles/responsive/_responsive-767px-max.scss
@@ -2,7 +2,6 @@
 // Responsive: Landscape phone to desktop/tablet
 // --------------------------------------------------
 
-
 @media (max-width: 767px) {
 
   // Padding to set content in a bit
@@ -102,18 +101,20 @@
   // Modals
   .modal {
     position: fixed;
-    top:   20px;
-    left:  20px;
+    top: 20px;
+    left: 20px;
     right: 20px;
     width: auto;
     margin: 0;
-    &.fade  { top: -100px; }
-    &.fade.in { top: 20px; }
+    &.fade {
+      top: -100px;
+    }
+    &.fade.in {
+      top: 20px;
+    }
   }
 
 }
-
-
 
 // UP TO LANDSCAPE PHONE
 // ---------------------
@@ -163,7 +164,7 @@
   // Medias
   // Reset float and spacing to stack
   .media .pull-left,
-  .media .pull-right  {
+  .media .pull-right {
     float: none;
     display: block;
     margin-bottom: 10px;
@@ -176,8 +177,8 @@
 
   // Modals
   .modal {
-    top:   10px;
-    left:  10px;
+    top: 10px;
+    left: 10px;
     right: 10px;
   }
   .modal-header .close {
