--- a/app/views/planboard.jade
+++ b/app/views/planboard.jade
@@ -88,7 +88,6 @@ section#planboard(ng-controller='timeline')
       hr
       .form-elements-group(ng-show='browser.mobile')
         label {{ui.planboard.from}}
-
         .control-group.dater-mobile(ng-show='views.slot.add || views.slot.edit || views.wish')
           input(name='date-start', type='datetime-local', ng-model='slot.start.datetime')
         .control-group.dater-mobile(ng-show='views.group || views.member')
@@ -96,7 +95,6 @@ section#planboard(ng-controller='timeline')
           type='datetime-local',
           ng-model='slot.start.datetime',
           disabled='disabled')
-
       .form-elements-group(ng-hide='browser.mobile')
         label {{ui.planboard.from}}
         .control-group.dater(ng-show='views.slot.add || views.slot.edit || views.wish')
@@ -109,14 +107,12 @@ section#planboard(ng-controller='timeline')
         .control-group.dater(ng-show='views.group || views.member')
           input(name='date-start', type='text', ng-model='slot.start.date', disabled='disabled')
           i.icon-calendar
-
         .control-group.timer(ng-show='views.slot.add || views.slot.edit || views.wish')
           input(name='time-start', type='text', ng-model='slot.start.time', bs-timepicker='bs-timepicker')
           i.icon-time
         .control-group.timer(ng-show='views.group || views.member')
           input(name='time-start', type='text', ng-model='slot.start.time', disabled='disabled')
           i.icon-time
-
       .form-elements-group(ng-show='browser.mobile')
         label {{ui.planboard.till}}
         .control-group.dater-mobile(ng-show='views.slot.add || views.slot.edit || views.wish')
@@ -128,7 +124,6 @@ section#planboard(ng-controller='timeline')
           disabled='disabled')
         br
         br
-
       .form-elements-group(ng-hide='browser.mobile')
         label {{ui.planboard.till}}
         .control-group.dater(ng-show='views.slot.add || views.slot.edit || views.wish')
@@ -147,7 +142,6 @@ section#planboard(ng-controller='timeline')
         .control-group.timer(ng-show='views.group || views.member')
           input(name='time-end', type='text', ng-model='slot.end.time', disabled='disabled')
           i.icon-time
-
       .form-elements-group(ng-show='views.slot.add || views.slot.edit || views.member')
         label {{ui.planboard.state}}
         select(ng-model='slot.state',
@@ -158,17 +152,14 @@ section#planboard(ng-controller='timeline')
         disabled='disabled',
         ng-options='option as value for (option, value) in states',
         ng-show='views.member')
-
       .form-elements-group.rightest(ng-show='views.slot.add')
         label {{ui.planboard.reoccuring}}
         input(type='checkbox', ng-model='slot.recursive')
-
       .form-elements-group(ng-show='views.group')
         small
           i(ng-show="(slot.diff < 0)") {{slot.diff | i18n_spec:'planboard.lessPeople'}}
           i(ng-show="(slot.diff == 0)") {{ui.planboard.samePeople}}
           i(ng-show="(slot.diff > 0)") {{slot.diff | i18n_spec:'planboard.morePeople'}}
-
       .form-elements-group(ng-show='views.wish')
         label {{ui.planboard.wished}}
         input.input-mini(name='wish-count',
@@ -180,12 +171,13 @@ section#planboard(ng-controller='timeline')
         ng-model='slot.wish',
         disabled='disabled',
         ng-show='app.resources.role > 1')
-
       .form-elements-group(ng-show='views.member')
         small: i {{ui.planboard.combine_reoccuring}}
-
       .form-elements-actions.pull-right
-        div(ng-show='ng-show')
+        div(ng-show='(slot.diff < 0)')
+          button.btn.btn-success(type='button',
+          ng-click='sendShortageMessage(slot)',
+          ng-hide='app.resources.role > 1') {{ui.planboard.sendMsgToMember}}
         div(ng-show='views.slot.add')
           button.btn.btn-success(type='button',
           ng-click='timelineOnAdd("true", slot)') {{ui.planboard.add}}
@@ -206,11 +198,11 @@ section#planboard(ng-controller='timeline')
       ul.nav.nav-tabs.nav-tabs-app(style='margin-right: 0px;')
         li.active
           a(href='planboard#timelineTab', data-toggle='tab', ng-click='destroy.statistics();')
-            span.entypo 
+            span.entypo &#128340;
             | {{ui.planboard.timeline}}
         li
           a(href='planboard#statisticsTab', data-toggle='tab', ng-click='destroy.timeline();')
-            span.entypo 
+            span.entypo &#128200;
             | {{ui.planboard.statistics}}
 
       .tab-content
@@ -230,28 +222,23 @@ section#planboard(ng-controller='timeline')
                 ng-show='divisions.length > 0')
               br(ng-show='browser.mobile')
               br(ng-show='browser.mobile')
-
               div(class="{{ (browser.mobile) && 'pull-left' || 'pull-right' }}",
               style="{{ (browser.mobile) && 'margin-left: -10px;' }}")
-
                 .btn-group
                   button.btn(type='button',
                   class="{{(timeline.config.legendarer==true) && 'active'}}",
                   ng-click='showLegenda()',
                   ng-model='timeline.config.legendarer') {{ui.planboard.legenda}}
-
                 .btn-group(ng-show='timeline.current.layouts.group')
                   button.btn(type='button',
                   class="{{(timeline.config.bar==true) && 'active'}}",
                   ng-click='barCharts()',
                   ng-model='timeline.config.bar') {{ui.planboard.barCharts}}
-
                 .btn-group(ng-show='timeline.current.layouts.group')
                   button.btn(type='button',
                   class="{{(timeline.config.wishes==true) && 'active'}}",
                   ng-click='groupWishes()',
                   ng-model='timeline.config.wishes') {{ui.planboard.wishes}}
-
                 .btn-group
                   button.btn(type='button',
                   class="{{(timeline.current.layouts.group==true) && 'active'}}",
@@ -261,8 +248,7 @@ section#planboard(ng-controller='timeline')
                   class="{{(timeline.current.layouts.members==true) && 'active'}}",
                   ng-model='timeline.current.layouts.members',
                   ng-click='requestTimeline("members")',
-                  ng-show='(app.resources.role < 3) || timeline.config.layouts.members')
-
+                  ng-show='(app.resources.role < 3) || timeline.config.layouts.members') {{ui.planboard.members}}
             hr
             .alert.alert-warning(ng-show='registeredNotifications.timeLineDragging')
               button.close(type='button',
@@ -319,9 +305,7 @@ section#planboard(ng-controller='timeline')
                       ng-model='timeline.config.legenda.groups.less')
                       | {{ui.planboard.legendaLabels.lessPeople}}
               hr
-
             #mainTimeline
-
           hr
           p
             small.pull-left
@@ -346,7 +330,6 @@ section#planboard(ng-controller='timeline')
               ng-selected='timeline.current.division',
               ng-change='changeDivision()',
               ng-show='divisions.length > 0')
-
             .pull-right
               .btn-group
                 button.btn(type='button',
@@ -357,8 +340,7 @@ section#planboard(ng-controller='timeline')
                 class="{{(timeline.current.layouts.members==true) && 'active'}}",
                 ng-model='timeline.current.layouts.members',
                 ng-click='requestTimeline("members")',
-                ng-show='(app.resources.role < 3) || timeline.config.layouts.members')
-
+                ng-show='(app.resources.role < 3) || timeline.config.layouts.members') {{ui.planboard.members}}
           hr
           .legenda
             .legenda-row
@@ -385,7 +367,6 @@ section#planboard(ng-controller='timeline')
                     .square
                     | {{ui.planboard.legendaLabels.lessPeople}}
             hr
-
           #stats
             #groupStats(ng-repeat='agg in data.aggs')
               div(ng-show='groupPieHide[agg.division.id] || (timeline.current.division == "all")')
@@ -438,7 +419,6 @@ section#planboard(ng-controller='timeline')
                         | ,
                         h5 {{agg.durations.less | calculateTimeInMinutes}}
                         small.muted {{ui.planboard.statMinutes}}
-
             #memberBars
               ul
                 li(ng-repeat='member in data.members')
