--- a/app/views/settings.jade
+++ b/app/views/settings.jade
@@ -1,46 +1,45 @@
-.page-header
-  h2 {{ui.settings.settings}}
+.page-header: h2 {{ui.settings.settings}}
 
-  .row-fluid
-    .tabbable.tabs-left
-      ul.nav.nav-tabs.nav-tabs-app(style='margin-right: 0px;')
-        li.active
-          a(href='settings#userSettingsTab', data-toggle='tab')
-            span.entypo 
-            | {{ui.settings.user}}
-        li
-          a(href='settings#appSettingsTab', data-toggle='tab')
-            span.entypo ⚙
-            | {{ui.settings.application}}
+.row-fluid
+  .tabbable.tabs-left
+    ul.nav.nav-tabs.nav-tabs-app(style='margin-right: 0px;')
+      li.active
+        a(href='settings#userSettingsTab', data-toggle='tab')
+          span.entypo &#128100;
+          | {{ui.settings.user}}
+      li
+        a(href='settings#appSettingsTab', data-toggle='tab')
+          span.entypo &#9881;
+          | {{ui.settings.application}}
 
-      .tab-content
+    .tab-content
 
-        #userSettingsTab.tab-pane.active
-          .tab-header
-            h3.pull-left {{ui.settings.userSettings}}
-          hr
-          form
-            fieldset
-              .control-group
-                label.control-label {{ui.settings.langSetting}}
-                select(ng-model='settings.user.language',
-                ng-options='option as value for (option, value) in languages')
-              br
-              .form-actions
-                button.btn.btn-success(type='submit',
-                ng-click='save(settings)') {{ui.settings.saveSettings}}
+      #userSettingsTab.tab-pane.active
+        .tab-header
+          h3.pull-left {{ui.settings.userSettings}}
+        hr
+        form
+          fieldset
+            .control-group
+              label.control-label {{ui.settings.langSetting}}
+              select(ng-model='settings.user.language',
+              ng-options='option as value for (option, value) in languages')
+            br
+            .form-actions
+              button.btn.btn-success(type='submit',
+              ng-click='save(settings)') {{ui.settings.saveSettings}}
 
-        #appSettingsTab.tab-pane
-          .tab-header
-            h3.pull-left {{ui.settings.appSettings}}
-          hr
-          form
-            fieldset
-              .control-group
-                label.control-label Eerste groep keuze
-                select(ng-model='settings.app.group',
-                ng-options='option as value for (option, value) in groups')
-              br
-              .form-actions
-                button.btn.btn-success(type='submit', ng-click='save(settings)')
-                  | {{ui.settings.saveSettings}}
+      #appSettingsTab.tab-pane
+        .tab-header
+          h3.pull-left {{ui.settings.appSettings}}
+        hr
+        form
+          fieldset
+            .control-group
+              label.control-label Eerste groep keuze
+              select(ng-model='settings.app.group',
+              ng-options='option as value for (option, value) in groups')
+            br
+            .form-actions
+              button.btn.btn-success(type='submit', ng-click='save(settings)')
+                | {{ui.settings.saveSettings}}
